# db-query-profiler

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yaml
db_query_profiler/: query_timer.py
