# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "db_query_profiler"
version = "0.0.8"
description = "Lightweight database query profiler."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.setuptools]
packages = ["db_query_profiler"]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.pytest.ini_options]
addopts = "--cov=db_query_profiler --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
